[package]
name = "lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lang_lib"
path = "lib/lang.rs"


[[bin]]
name = "lang_repl_exe"
path = "repl/main.rs"

[dependencies]
nom = "7.1.1"
rustyline = "10.0.0"
rustyline-derive = "0.7.0"
