[package]
name = "study"
version = "0.1.0"
edition = "2021"
author = ["Euraxluo <euraxluo@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.19", features = ["derive"] }
crossbeam-channel = "0.5.6"
ctrlc = "3.2.3"
human-panic = "1.0.3"
lazy_static = "1.4.0"
sled = "0.34.7"
datafusion = "14.0.0"
tokio = "1.21.2"
nom = "7.1.1"
poem = "1.3.50"
poem-openapi = { version = "2.0.21", features = ["swagger-ui"] }
tracing-subscriber = "0.3.16"
